Apply suggestions from code review
Co-authored-by: Ryan Caudy <rcaudy@gmail.com>